Changes:

- fixed import from plain text and xml problem (Bug #3025261) 
- Safe Combination Setup dialog width maximum set (Bug #2980874)

changes in swt 0.8 beta 4 (15.02.2010)
- Disable systray on MacOSX Carbon (preference is overriden/ignored)
- fixed unlocking minimized window: Enter passphrase once (Trac Ticket 18)
- PasswordsafeSWT is now minimized when locked (fixes Trac Ticket 14 when working without tray icon)
- added hide notes column display preference (Feature 2710943)
- removed show password column display preference
- changed accelerator key for Open and Copy URL actions to CTRL-L and CTRL-ALT-L, respectively 
- avoid screen updates when updating an entries access time
- enabled 64bit version on Mac OSX 10.6.2 (Bug #2908145)

changes in swt 0.8 beta 3 (27.11.2009)
- added open url action to menu toolbar and context menu
- open jpwsafe website should now work in Linux KDE desktop (Java 6)
- added record access time saving preference (default is false)
- fixed unlocking with open edit dialoge (Trac Ticket 14)
- fixed "open safe" in first time startup dialogue
- close on doubleclick on tray icon (Bug #2790970)
- do not open several passphrase entry dialogs on restore
- replace tabs and other whitespace with space in notes column for tree and table view
- fixed excessive object allocation with SHA256 digest (Trac Ticket 10) 
- update jface/eclipse libs to 3.5.1

changes in swt 0.8 beta 2 (30.09.2009)
- fix for asymmetric passphrase corruption in 0.8 beta 1
- unknown V3 fields are handled (Bug #2462736)
- expand/collapse tree on doubleclick
- added copy URL action (Patch #2813457 by timmydog)
- reopen when doubleclicking on tray icon (Bug #2790970)
- passwordsafe lib Unit test coverage
- upgrade to swt and jface 3.5.1 / 3.5.0
- initial read only support (in startup screen, with a preference)
- added licence dialogue
- maintain tree expansion on delete item (Patch #2783428 by timmydog) 

changes in swt 0.8 beta 1 (26.04.2009)